changes/4.9/8597e6b2b9df0a1c777e3183c105d78a470d0c66
greybus: Fix parameters of core_param()

core_param() takes four parameters instead of three and so results in this
compilation error:

greybus/core.c:25:33: error: macro "core_param" requires 4 arguments, but only 3 given
 core_param(nogreybus, bool, 0444);
                                 ^

Fix this by adding proper arguments to it.

Signed-off-by: Viresh Kumar <viresh.kumar@linaro.org>
Signed-off-by: Greg Kroah-Hartman <greg@kroah.com>

